prevent issue title from overlapping up vote button

--- a/resources/assets/css/components/issue.less
+++ b/resources/assets/css/components/issue.less
@@ -15,6 +15,11 @@
     }
   }
 }
+.issue-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+}
 .issues-list {
   .issue-card {
     .issue-divider();
